--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -10,6 +10,9 @@
   list-style: none;
   font-family: "Press Start 2P";
 }
+html {
+  overflow: hidden;
+}
 body {
   overflow: hidden;
   background-color: $bluesky;
@@ -31,9 +34,28 @@ input {
     outline: none;
   }
 }
+
+//// General
+
+// texts
+h1 {
+  font-size: 24px;
+  text-align: center;
+  margin-top: 25px;
+}
+h5 {
+  font-size: 18px;
+}
+p {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+//// Spacing / Margins
+
 .container {
   width: 100%;
-  max-width: 1000px;
+  max-width: 1224px;
   margin-inline: auto;
   padding-inline: 12px;
 }
@@ -41,7 +63,22 @@ input {
   max-width: 1200px;
 }
 
-//// Spacing / Margins
+.mi-auto {
+  margin-inline: auto;
+}
+
+.mt-10 {
+  margin-top: 10px;
+}
+.mt-20 {
+  margin-top: 20px;
+}
+.mt-30 {
+  margin-top: 30px;
+}
+.mt-40 {
+  margin-top: 40px;
+}
 
 .mb-10 {
   margin-bottom: 10px;
@@ -67,24 +104,8 @@ input {
 .d-block {
   display: block;
 }
-
-//// General
-
-// texts
-h1 {
-  font-size: 30px;
-}
-
-// shadows
-
-h1,
-h2 {
-  text-shadow: 0px 4px 0px #000000;
-}
-h3,
-h4,
-p {
-  text-shadow: 0px 3px 0px #000000;
+.d-none {
+  display: none;
 }
 
 // buttons
@@ -138,31 +159,54 @@ p {
     content: "";
   }
   &::before {
-    width: calc(100% + 6px);
+    width: calc(100% + 8px);
     height: 100%;
     top: 0;
-    left: -3px;
+    left: -4px;
     z-index: -1;
   }
   &::after {
     width: 100%;
-    height: calc(100% + 6px);
-    top: -3px;
+    height: calc(100% + 8px);
+    top: -4px;
     left: 0;
     z-index: -1;
   }
 }
 
-.allow-scroll {
-  overflow-y: auto;
-  max-height: 100vh;
+// shadows
+
+h1,
+h2 {
+  text-shadow: 0px 4px 0px #000000;
+}
+h3,
+h4,
+p {
+  text-shadow: 0px 2px 0px #000000;
 }
 
 // blocks
 
+.allow-scroll {
+  overflow-y: auto;
+  max-height: calc(100vh - 150px);
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: black;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: white;
+  }
+}
 .text-block {
   background-color: $grey;
   color: black;
+  width: 100%;
+  padding: 15px;
 }
 
 // form
@@ -172,7 +216,9 @@ label {
 }
 input {
   background-color: $grey;
-  padding: 5px 8px;
+  padding: 10px 15px;
+  font-size: 16px;
+  max-width: 250px;
 }
 
 // item-list
@@ -181,11 +227,96 @@ input {
   padding: 15px;
   background-color: $grey;
   color: black;
+  width: 100%;
+  max-width: 400px;
 
+  a {
+    font-size: 14px;
+  }
   .button {
     border: 2px solid black;
     &:after {
       z-index: -1;
+    }
+  }
+}
+
+///// Menu
+
+.burger-menu {
+  position: fixed;
+  bottom: 25px;
+  width: 100%;
+  height: 58px;
+  background-color: #d43000;
+  background-image: url("/src/assets/brick.png");
+  background-size: 57px 58px;
+  background-repeat: repeat;
+  background-position: left bottom;
+
+  nav {
+    opacity: 0;
+    position: absolute;
+    z-index: -100;
+    top: 25px;
+    height: calc(100vh - 107px);
+    width: 100%;
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: space-evenly;
+
+    a {
+      display: block;
+      text-decoration: none;
+      font-size: 21px;
+
+      &.active {
+        text-decoration: underline;
+      }
+    }
+  }
+
+  &.active {
+    height: calc(100vh - 25px);
+
+    nav {
+      opacity: 1;
+      z-index: 100;
+      transition: all 0.1s ease-in-out 0.2s;
+    }
+  }
+  &,
+  &.active {
+    transition: height 0.2s linear;
+  }
+
+  .burger-button {
+    position: fixed;
+    left: 16px;
+    bottom: 25px;
+    width: 57px;
+    height: 58px;
+    background-image: url("/src/assets/question-block.png");
+    background-size: contain;
+
+    &:after {
+      content: "Menu";
+      display: block;
+      position: absolute;
+      top: calc(100% + 5px);
+      left: 2px;
+      color: white;
+    }
+
+    &.active {
+      background-image: url("/src/assets/cross-block.png");
+
+      &:after {
+        content: "Fermer";
+      }
     }
   }
 }
@@ -195,3 +326,27 @@ input {
 // Home
 
 //// Responsive
+
+@media screen and (min-width: 767px) {
+  .burger-menu {
+    &.active {
+      height: 174px;
+    }
+
+    nav {
+      top: 0;
+      left: 74px;
+      height: 100%;
+      width: calc(100% - 148px);
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      margin-inline: auto;
+      gap: 40px;
+
+      a {
+        font-size: 16px;
+      }
+    }
+  }
+}
