--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -174,6 +174,19 @@ p {
   }
 }
 
+.item-list,
+.text-block {
+  .button {
+    border: 2px solid black;
+    &:after {
+      z-index: -1;
+    }
+  }
+  p {
+    text-shadow: none;
+  }
+}
+
 // shadows
 
 h1,
@@ -232,12 +245,6 @@ input {
 
   a {
     font-size: 14px;
-  }
-  .button {
-    border: 2px solid black;
-    &:after {
-      z-index: -1;
-    }
   }
 }
 
@@ -324,6 +331,58 @@ input {
 //// Pages
 
 // Home
+
+// Administration
+
+.block {
+  height: 57px;
+  width: 58px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+
+  .button-name {
+    color: white;
+  }
+}
+
+.validation-item {
+  display: flex;
+  justify-content: space-evenly;
+  padding-block: 40px;
+  border-bottom: 4px solid black;
+
+  .user-container,
+  .base-container {
+    display: flex;
+    flex-direction: row;
+    width: calc(50% - 126px);
+    img {
+      object-fit: cover;
+      object-position: center center;
+      aspect-ratio: 16 / 9;
+      width: 200px;
+      height: 112px;
+      margin-right: 20px;
+    }
+    p {
+      line-height: 30px;
+    }
+  }
+  .button-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  &:last-child {
+    border: none;
+  }
+}
 
 //// Responsive
 
