[ADD] style for login page

--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -79,6 +79,12 @@ p {
 .mt-40 {
   margin-top: 40px;
 }
+.mt-50 {
+  margin-top: 50px;
+}
+.mt-60 {
+  margin-top: 60px;
+}
 
 .mb-10 {
   margin-bottom: 10px;
