--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -83,6 +83,14 @@ p {
   margin-top: 40px;
 }
 
+.mt-50 {
+  margin-top: 50px;
+}
+
+.mt-60 {
+  margin-top: 60px;
+}
+
 .mb-10 {
   margin-bottom: 10px;
 }
