--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -390,6 +390,39 @@ input {
   }
 }
 
+.user-item {
+  display: flex;
+  justify-content: space-evenly;
+  padding-block: 15px;
+  border-bottom: 4px solid black;
+
+  .user-container,
+  .base-container {
+    display: flex;
+    flex-direction: column;
+    width: calc(50% - 126px);
+    img {
+      object-fit: cover;
+      object-position: center center;
+      aspect-ratio: 16 / 9;
+      width: 200px;
+      height: 112px;
+      margin-right: 20px;
+    }
+    p {
+      line-height: 30px;
+    }
+  }
+  .button-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  &:last-child {
+    border: none;
+  }
+}
+
 //// Responsive
 
 @media screen and (min-width: 767px) {
