--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -144,17 +144,16 @@ p {
 }
 
 .button,
-.input,
+input,
 .text-block,
 .item-list {
   position: relative;
   width: -moz-fit-content;
   width: fit-content;
 }
-.button::after,
-.button::before,
-.input::after,
-.input::before,
+.button::after, .button::before,
+input::after,
+input::before,
 .text-block::after,
 .text-block::before,
 .item-list::after,
@@ -165,7 +164,7 @@ p {
   content: "";
 }
 .button::before,
-.input::before,
+input::before,
 .text-block::before,
 .item-list::before {
   width: calc(100% + 8px);
@@ -175,7 +174,7 @@ p {
   z-index: -1;
 }
 .button::after,
-.input::after,
+input::after,
 .text-block::after,
 .item-list::after {
   width: 100%;
@@ -286,8 +285,7 @@ input {
   z-index: 100;
   transition: all 0.1s ease-in-out 0.2s;
 }
-.burger-menu,
-.burger-menu.active {
+.burger-menu, .burger-menu.active {
   transition: height 0.2s linear;
 }
 .burger-menu .burger-button {
@@ -314,6 +312,16 @@ input {
   content: "Fermer";
 }
 
+.exclamation-button {
+  position: fixed;
+  right: 16px;
+  bottom: 25px;
+  width: 57px;
+  height: 58px;
+  background-image: url("/src/assets/exclamation-block.png");
+  background-size: contain;
+}
+
 @media screen and (min-width: 767px) {
   .burger-menu.active {
     height: 174px;
@@ -332,4 +340,4 @@ input {
   .burger-menu nav a {
     font-size: 16px;
   }
-} /*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
