--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -335,6 +335,14 @@ input {
   background-size: contain;
 }
 
+// Register
+
+label {
+  text-shadow: 0px 2px 0px #000000;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 //// Responsive
 
 @media screen and (min-width: 767px) {
