--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -26,6 +26,7 @@ button {
   display: block;
   background-color: transparent;
   border: none;
+  text-align: left;
   cursor: pointer;
 }
 input {
@@ -41,10 +42,11 @@ input {
 h1 {
   font-size: 24px;
   text-align: center;
-  margin-top: 25px;
+  margin-block: 25px;
 }
 h5 {
-  font-size: 18px;
+  font-size: 14px;
+  line-height: 18px;
 }
 p {
   font-size: 1rem;
@@ -61,6 +63,32 @@ p {
 }
 .container-big {
   max-width: 1200px;
+}
+
+// slider
+.slider-container {
+  .slider-wrapper {
+    display: flex;
+    width: 200vw;
+  }
+  .slider-item {
+    width: 100vw;
+    transition: transform 0.3s;
+  }
+
+  &.left-active {
+    .slider-item:last-child {
+      transform: translateX(100%);
+    }
+  }
+  &.right-active {
+    .slider-item:first-child {
+      transform: translateX(-100%);
+    }
+    .slider-item:last-child {
+      transform: translateX(-100%);
+    }
+  }
 }
 
 .mi-auto {
@@ -110,7 +138,8 @@ p {
 
 // buttons
 
-.button {
+.button,
+.switch-button {
   background-color: $green;
   color: white;
   box-shadow: inset -3px -3px 0px 0px $dark-green;
@@ -133,7 +162,7 @@ p {
 
   &.tiny-button {
     padding: 8px;
-    font-size: 12px;
+    font-size: 11px;
     box-shadow: inset -2px -2px 0px 0px $dark-green;
 
     &:hover.tiny-button {
@@ -142,35 +171,93 @@ p {
   }
 }
 
+.switch-button {
+  position: relative;
+  color: inherit;
+  margin-inline: auto;
+  margin-top: 50px;
+  margin-bottom: 40px;
+  height: 38px;
+  width: 180px !important;
+
+  a {
+    position: absolute;
+    top: 12px;
+    text-decoration: none;
+
+    &:first-child {
+      left: 50px;
+    }
+    &:nth-child(2) {
+      opacity: 0;
+      right: 50px;
+      text-align: right;
+    }
+  }
+
+  div {
+    position: absolute;
+    left: 5px;
+    top: 5px;
+    display: block;
+    height: 28px;
+    aspect-ratio: 5 / 4;
+    background-image: url("/src/assets/switch.png");
+    background-size: contain;
+  }
+
+  &.active {
+    div {
+      left: calc(100% - 40px);
+    }
+
+    a {
+      &:first-child {
+        margin-left: 40px;
+        opacity: 0;
+      }
+      &:nth-child(2) {
+        opacity: 1;
+      }
+    }
+  }
+  & div,
+  &.active div {
+    transition: all 0.15s;
+  }
+}
+
 // borders
 
 .button,
 .input,
 .text-block,
-.item-list {
+.item-list,
+.switch-button {
   position: relative;
   width: fit-content;
 
   &::after,
   &::before {
-    background-color: black;
+    width: 100%;
+    height: 100%;
     display: block;
     position: absolute;
     content: "";
+    z-index: -1;
+    top: 0;
+    left: 0;
+    border: 0 solid black;
   }
   &::before {
-    width: calc(100% + 8px);
-    height: 100%;
-    top: 0;
-    left: -4px;
-    z-index: -1;
+    border-top-width: 4px;
+    border-bottom-width: 4px;
+    top: -4px;
   }
   &::after {
-    width: 100%;
-    height: calc(100% + 8px);
-    top: -4px;
-    left: 0;
-    z-index: -1;
+    border-left-width: 4px;
+    border-right-width: 4px;
+    left: -4px;
   }
 }
 
@@ -190,6 +277,7 @@ p {
 
 .allow-scroll {
   overflow-y: auto;
+  height: 100vh;
   max-height: calc(100vh - 150px);
   &::-webkit-scrollbar {
     width: 6px;
@@ -200,6 +288,10 @@ p {
   }
   &::-webkit-scrollbar-track {
     background-color: white;
+  }
+
+  &.tiny-allow-scroll {
+    max-height: calc(100vh - 300px);
   }
 }
 .text-block {
@@ -223,6 +315,13 @@ input {
 
 // item-list
 
+.list-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-block: 6px;
+}
+
 .item-list {
   padding: 15px;
   background-color: $grey;
@@ -230,13 +329,44 @@ input {
   width: 100%;
   max-width: 400px;
 
-  a {
-    font-size: 14px;
+  &.has-img {
+    display: flex;
+  }
+
+  .item-infos {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex: auto;
+  }
+
+  img {
+    width: 140px;
+    aspect-ratio: 4 / 3;
+    object-fit: cover;
+    object-position: center;
+    float: left;
+    margin-right: 16px;
+  }
+  a,
+  p {
+    font-size: 13px;
+    text-shadow: none;
   }
   .button {
-    border: 2px solid black;
+    &:after,
+    &:before {
+      z-index: +1;
+    }
+    &:before {
+      border-top-width: 3px;
+      border-bottom-width: 3px;
+      top: -3px;
+    }
     &:after {
-      z-index: -1;
+      border-left-width: 3px;
+      border-right-width: 3px;
+      left: -3px;
     }
   }
 }
@@ -253,6 +383,7 @@ input {
   background-size: 57px 58px;
   background-repeat: repeat;
   background-position: left bottom;
+  z-index: +1;
 
   nav {
     opacity: 0;
@@ -341,7 +472,6 @@ input {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      margin-inline: auto;
       gap: 40px;
 
       a {
