--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -233,7 +233,8 @@ input,
   width: -moz-fit-content;
   width: fit-content;
 }
-.button::after, .button::before,
+.button::after,
+.button::before,
 input::after,
 input::before,
 .text-block::after,
@@ -426,7 +427,8 @@ input {
   z-index: 100;
   transition: all 0.1s ease-in-out 0.2s;
 }
-.burger-menu, .burger-menu.active {
+.burger-menu,
+.burger-menu.active {
   transition: height 0.2s linear;
 }
 .burger-menu .burger-button {
@@ -468,13 +470,7 @@ input {
   position: absolute;
   top: calc(100% + 5px);
   right: 2px;
-  color: white;
 }
-
-label {
-  text-shadow: 0px 2px 0px #000000;
-  font-size: 1rem;
-  line-height: 1.5rem;
 
 .block {
   height: 57px;
@@ -489,6 +485,12 @@ label {
 }
 .buttons .button-name {
   color: white;
+}
+
+label {
+  text-shadow: 0px 2px 0px #000000;
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .validation-item {
@@ -561,7 +563,6 @@ label {
 }
 .user-item:last-child {
   border: none;
-
 }
 
 @media screen and (min-width: 767px) {
@@ -581,4 +582,4 @@ label {
   .burger-menu nav a {
     font-size: 16px;
   }
-}/*# sourceMappingURL=main.css.map */
+} /*# sourceMappingURL=main.css.map */
