--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -224,17 +224,18 @@ p {
 }
 
 .button,
-input,
+.input,
 .text-block,
 .item-list,
 .switch-button {
   position: relative;
   width: -moz-fit-content;
   width: fit-content;
+  margin-left: 4px;
 }
 .button::after, .button::before,
-input::after,
-input::before,
+.input::after,
+.input::before,
 .text-block::after,
 .text-block::before,
 .item-list::after,
@@ -252,7 +253,7 @@ input::before,
   border: 0 solid black;
 }
 .button::before,
-input::before,
+.input::before,
 .text-block::before,
 .item-list::before,
 .switch-button::before {
@@ -261,7 +262,7 @@ input::before,
   top: -4px;
 }
 .button::after,
-input::after,
+.input::after,
 .text-block::after,
 .item-list::after,
 .switch-button::after {
@@ -297,7 +298,7 @@ p {
 .allow-scroll {
   overflow-y: auto;
   height: 100vh;
-  max-height: calc(100vh - 150px);
+  max-height: calc(100vh - 190px);
 }
 .allow-scroll::-webkit-scrollbar {
   width: 6px;
@@ -466,6 +467,7 @@ input {
   position: absolute;
   top: calc(100% + 5px);
   right: 2px;
+  color: white;
 }
 
 .block {
