--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 * {
   margin: 0;
@@ -499,6 +500,11 @@ label {
   padding-block: 40px;
   border-bottom: 4px solid black;
 }
+.validation-item .image-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
 .validation-item .user-container,
 .validation-item .base-container {
   display: flex;
@@ -666,5 +672,56 @@ label {
   }
   .burger-menu nav a {
     font-size: 16px;
+  }
+}
+@media (max-width: 1000px) {
+  .validation-item {
+    flex-direction: column;
+    align-items: center;
+  }
+  .validation-item .image-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+  }
+  .validation-item .base-container,
+  .validation-item .user-container {
+    width: 50%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .validation-item .base-container img,
+  .validation-item .user-container img {
+    width: 100px;
+    height: auto;
+  }
+  .validation-item .button-container {
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+  }
+}
+@media (max-width: 1000px) {
+  .street-item {
+    flex-direction: column;
+    align-items: center;
+  }
+  .street-item .base-container {
+    width: 100%; /* Ajustez la largeur pour les appareils mobiles */
+    flex-direction: column;
+    align-items: center;
+    margin-right: 0; /* Supprimez la marge à droite pour les mobiles */
+  }
+  .street-item .base-container img {
+    width: 150px; /* Taille plus petite pour les images */
+    height: auto; /* Gardez l'aspect ratio de l'image */
+    margin-bottom: 10px; /* Ajoutez de l'espace entre l'image et le texte */
+  }
+  .street-item .button-container {
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+    margin-top: 20px;
   }
 } /*# sourceMappingURL=main.css.map */
