--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -524,6 +524,12 @@ label {
   padding-block: 40px;
   border-bottom: 4px solid black;
 
+  .image-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
   .user-container,
   .base-container {
     display: flex;
@@ -683,6 +689,64 @@ label {
       a {
         font-size: 16px;
       }
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .validation-item {
+    flex-direction: column;
+    align-items: center;
+
+    .image-container {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      width: 100%;
+    }
+
+    .base-container,
+    .user-container {
+      width: 50%;
+      flex-direction: column;
+      align-items: center;
+
+      img {
+        width: 100px;
+        height: auto;
+      }
+    }
+    .button-container {
+      flex-direction: row;
+      justify-content: space-evenly;
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .street-item {
+    flex-direction: column;
+    align-items: center;
+
+    .base-container {
+      width: 100%; /* Ajustez la largeur pour les appareils mobiles */
+      flex-direction: column;
+      align-items: center;
+      margin-right: 0; /* Supprimez la marge à droite pour les mobiles */
+
+      img {
+        width: 150px; /* Taille plus petite pour les images */
+        height: auto; /* Gardez l'aspect ratio de l'image */
+        margin-bottom: 10px; /* Ajoutez de l'espace entre l'image et le texte */
+      }
+    }
+
+    .button-container {
+      flex-direction: row;
+      justify-content: space-evenly;
+      width: 100%;
+      margin-top: 20px;
     }
   }
 }
