--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -233,12 +233,9 @@ p {
   width: fit-content;
   margin-left: 4px;
 }
-
-.button::after,
-.button::before,
-input::after,
-input::before,
-
+.button::after, .button::before,
+.input::after,
+.input::before,
 .text-block::after,
 .text-block::before,
 .item-list::after,
@@ -428,8 +425,7 @@ input {
   z-index: 100;
   transition: all 0.1s ease-in-out 0.2s;
 }
-.burger-menu,
-.burger-menu.active {
+.burger-menu, .burger-menu.active {
   transition: height 0.2s linear;
 }
 .burger-menu .burger-button {
@@ -471,6 +467,7 @@ input {
   position: absolute;
   top: calc(100% + 5px);
   right: 2px;
+  color: white;
 }
 
 .block {
@@ -486,6 +483,10 @@ input {
 }
 .buttons .button-name {
   color: white;
+}
+
+.ranking-page p span {
+  width: 190px;
 }
 
 label {
@@ -583,4 +584,4 @@ label {
   .burger-menu nav a {
     font-size: 16px;
   }
-} /*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
