page mon-compte finished v1

--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -38,6 +38,10 @@ input:focus-visible {
   outline: none;
 }
 
+.t-center {
+  text-align: center;
+}
+
 h1 {
   font-size: 24px;
   text-align: center;
@@ -176,6 +180,10 @@ p {
 .switch-button.tiny-button:hover.tiny-button {
   box-shadow: inset -4px -4px 0px 0px #4aa52e;
 }
+.button.tiny-button.red-button.tiny-button,
+.switch-button.tiny-button.red-button.tiny-button {
+  box-shadow: inset -4px -4px 0px 0px #8c2022;
+}
 
 .switch-button {
   position: relative;
@@ -299,7 +307,7 @@ p {
 .allow-scroll {
   overflow-y: auto;
   height: 100vh;
-  max-height: calc(100vh - 150px);
+  max-height: calc(100vh - 190px);
 }
 .allow-scroll::-webkit-scrollbar {
   width: 6px;
@@ -313,6 +321,9 @@ p {
 }
 .allow-scroll.tiny-allow-scroll {
   max-height: calc(100vh - 300px);
+}
+.allow-scroll.minus-allow-scroll {
+  max-height: calc(100vh - 350px);
 }
 
 .text-block {
@@ -563,6 +574,10 @@ label {
 }
 .user-item:last-child {
   border: none;
+}
+
+.score img {
+  width: 22px;
 }
 
 @media screen and (min-width: 767px) {
