--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -39,6 +39,10 @@ input {
 //// General
 
 // texts
+
+.t-center {
+  text-align: center;
+}
 h1 {
   font-size: 24px;
   text-align: center;
@@ -174,6 +178,9 @@ p {
     &:hover.tiny-button {
       box-shadow: inset -4px -4px 0px 0px $dark-green;
     }
+    &.red-button.tiny-button {
+      box-shadow: inset -4px -4px 0px 0px $dark-red;
+    }
   }
 }
 
@@ -297,7 +304,7 @@ p {
 .allow-scroll {
   overflow-y: auto;
   height: 100vh;
-  max-height: calc(100vh - 150px);
+  max-height: calc(100vh - 190px);
   &::-webkit-scrollbar {
     width: 6px;
     height: 6px;
@@ -311,6 +318,9 @@ p {
 
   &.tiny-allow-scroll {
     max-height: calc(100vh - 300px);
+  }
+  &.minus-allow-scroll {
+    max-height: calc(100vh - 350px);
   }
 }
 .text-block {
@@ -582,6 +592,14 @@ label {
   }
   &:last-child {
     border: none;
+  }
+}
+
+// Account
+
+.score {
+  img {
+    width: 22px;
   }
 }
 
