--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -514,7 +514,7 @@ input {
 
 .buttons {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   flex-wrap: wrap;
   gap: 20px;
 
@@ -614,43 +614,44 @@ label {
 
 .score {
   img {
-  width: 22px;
- }
-.street-item {
-  display: flex;
-  justify-content: space-evenly;
-  padding-block: 30px;
-  border-bottom: 4px solid black;
-
-  .user-container,
-  .base-container {
+    width: 22px;
+  }
+  .street-item {
     display: flex;
-    flex-direction: row;
-    width: calc(50% - 126px);
-    img {
-      object-fit: cover;
-      object-position: center center;
-      aspect-ratio: 16 / 9;
-      width: 200px;
-      height: 112px;
-      margin-right: 20px;
+    justify-content: space-evenly;
+    padding-block: 30px;
+    border-bottom: 4px solid black;
+
+    .user-container,
+    .base-container {
+      display: flex;
+      flex-direction: row;
+      width: calc(50% - 126px);
+      img {
+        object-fit: cover;
+        object-position: center center;
+        aspect-ratio: 16 / 9;
+        width: 200px;
+        height: 112px;
+        margin-right: 20px;
+      }
+      p {
+        line-height: 30px;
+      }
+      .text-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
     }
-    p {
-      line-height: 30px;
-    }
-    .text-container {
+    .button-container {
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: space-evenly;
     }
-  }
-  .button-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-  }
-  &:last-child {
-    border: none;
+    &:last-child {
+      border: none;
+    }
   }
 }
 
